--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="connectivity_error">No internet connection</string>
     <string name="unknown_error">Unknown error</string>
     <string name="access_deny">Access deny</string>
+    <string name="welcome_text">Welcome!</string>
+    <string name="to_watch_a_quick_tutorial">To watch a quick tutorial,</string>
+    <string name="click_here">click here.</string>
+    <string name="go_to_settings">After watching the tutorial, now you know how to map alphabets with features. Go to settings page to start your own mapping.</string>
+    <string name="settings">Settings</string>
+    <string name="about_the_app">&#8226; Draw an alphabet to start an app or feature <br/> &#8226; Customize your own mapping</string>
+    <string name="things_to_do">Things you can do with this app:</string>
 
 </resources>
