--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="settings">Settings</string>
     <string name="about_the_app">&#8226; Draw an alphabet to start an app or feature <br/> &#8226; Customize your own mapping</string>
     <string name="things_to_do">Things you can do with this app:</string>
+    <string name="launch_a_tool_or_an_app_by_drawing_the_corresponding_alphabet">Map the alphabets and launch a tool or an app by drawing the corresponding alphabet.</string>
+    <string name="try_it">Try it</string>
+    <string name="application_vs_alphabet_mapping">Application vs Alphabet Mapping</string>
 
 </resources>
